# mastic

./: .gitignore  .impeccable-mastic-design.json  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bootstrap-artifact.yml  cocogitto.yml  codeql.yml  dependency-review.yml  python-quality.yml  scorecard.yml
.hooks/: pre-push.sh
.impeccable/: config.json
.serena/: project.yml
docs/: README.md
docs/adr/: 0001-current-release-resolution-and-offline-freshness.md  0002-separate-claims-disposition-and-operational-condition.md  0003-separate-declarations-lifecycle-and-adapter-capabilities.md  0004-separate-online-current-observations-from-offline-signatures.md  0005-separate-upgrade-policy-recovery-and-removal-authority.md  0006-bind-owner-native-upgrades-to-verified-artifact-closures.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/explanation/: architecture.md
docs/how-to/: inspect-and-diagnose.md  validate-deployment.md
docs/mastic/: architecture.md  deployment-contract.md
docs/reference/: assessment-schema-v2.md  cli.md  deployment-contract.md  domain-and-adapter-contracts.md
docs/research/: engine-lifecycle-bakeoff.md  external-application-release-authorities.md  gateway-bifrost-litellm-bakeoff.md  inference-gateway-landscape.md  (+7 more)
packaging/: build-backend.in  hindsight-api-0.8.4.in
scripts/: bootstrap-mastic.zsh.in  build-bootstrap-closure.zsh  build-bootstrap.zsh
tests/: __init__.py  test_responses_adapter.py  test_responses_transport.py
(+156 files in other folders)
