[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mastic"
version = "0.1.0"
description = "Manage local MLX runtimes, models, services, and application targets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan D Vasin" }]
dependencies = [
  "httpx>=0.28,<1",
  "huggingface-hub>=1.0,<2",
  "psutil>=7.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "rich>=14,<15",
  "starlette>=1.3.1,<2",
  "textual>=6,<7",
  "tomlkit>=0.13,<1",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
mastic = "mastic.entrypoints:cli_main"
masticd = "mastic.entrypoints:daemon_main"

[dependency-groups]
dev = ["httpx2>=2.7,<3", "pyrefly==1.1.1", "ruff==0.15.22"]

[tool.hatch.build.targets.wheel]
packages = ["src/mastic"]

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = [".venv", "dist"]
search-path = ["src"]
python-version = "3.11"
python-platform = "darwin"
preset = "basic"
disable-project-excludes-heuristics = true
